# droneengage_communication

./: .gitignore  CMakeLists.txt  Makefile  README.md  andruav_auth.cpp  andruav_auth.hpp  andruav_comm_server.cpp  andruav_comm_server.hpp  andruav_comm_session.cpp  andruav_comm_session.hpp  andruav_unit.cpp  andruav_unit.hpp  build.sh  build_ddebug.sh  build_release.sh  cesca_root.crt  config.home.module.json  config.module.json  config.module2.json  configFile.cpp  configFile.hpp  de_comm.config.home3.module.json  de_comm.config.module.json  de_comm.config.module.localserver.json  doxygen.conf  fcb_traffic_optimizer.cpp  global.hpp  llms.txt  main.cpp  messages.hpp  root.crt  start1.sh  start2.sh  start3.sh  start_local_server.sh  status.hpp  uavos_modules_manager.cpp  uavos_modules_manager.hpp  udpClient.cpp  udpClient.hpp  (+3 more)
.github/workflows/: build.yml
cmake/: FindSystemBoost.cmake
comm_server/: andruav_auth.cpp  andruav_auth.hpp  andruav_comm_server.cpp  andruav_comm_server.hpp  andruav_comm_session.cpp  andruav_comm_session.hpp  andruav_facade.cpp  andruav_facade.hpp  andruav_unit.hpp
deployment/: de_comm.config.module.parent.json  de_comm.config.module.slave.json  start_parent.sh  start_slave.sh
examples/: Makefile  test_buzzer.cpp
examples/buzzer/: Makefile  test_buzzer.cpp
hal/: gpio.hpp
hal_linux/: rpi_gpio.cpp  rpi_gpio.hpp
helpers/: getopt_cpp.cpp  getopt_cpp.hpp  helpers.cpp  helpers.hpp  util_rpi.cpp  util_rpi.hpp
notification_module/: buzzer.cpp  buzzer.hpp  leds.cpp  leds.hpp  notification.hpp
scripts/: sh_command_template.sh  sh_reboot.sh  sh_shutdown.sh
src/: CMakeLists.txt  configFile.cpp  configFile.hpp  global.hpp  localConfigFile.cpp  localConfigFile.hpp  main.cpp  messages.hpp  status.hpp  sync_fire_events.hpp  udpCommunicator.cpp  udpCommunicator.hpp  version.h
src/comm_server/: andruav_auth.cpp  andruav_auth.hpp  andruav_comm_p2p.cpp  andruav_comm_p2p.hpp  andruav_comm_server.cpp  andruav_comm_server.hpp  andruav_comm_server_base.cpp  andruav_comm_server_base.hpp  andruav_comm_server_local.cpp  andruav_comm_server_local.hpp  andruav_comm_server_manager.cpp  andruav_comm_server_manager.hpp  andruav_comm_session.cpp  andruav_comm_session.cpp.x  andruav_comm_session.hpp  andruav_comm_session.hpp.x  andruav_comm_ws.cpp  andruav_comm_ws.hpp  andruav_facade.cpp  andruav_facade.hpp  andruav_message.cpp  andruav_message.hpp  andruav_parser.cpp  andruav_parser.hpp  andruav_unit.cpp  andruav_unit.hpp
src/de_broker/: andruav_message.cpp  andruav_message.hpp  andruav_message_buffer.cpp  andruav_message_buffer.hpp  de_modules_manager.cpp  de_modules_manager.hpp  udpCommunicator.cpp  udpCommunicator.hpp  unixDgramCommunicator.cpp  unixDgramCommunicator.hpp
src/de_broker/common/: chunk_protocol.hpp
src/de_general_mission_planner/: mission_file.cpp  mission_file.hpp  mission_manager_base.cpp  mission_manager_base.hpp
src/hal/: gpio.hpp
src/hal_linux/: rpi_gpio.cpp  rpi_gpio.hpp
src/helpers/: colors.hpp  helpers.cpp  helpers.hpp  json_nlohmann.hpp  util_rpi.cpp  util_rpi.hpp
src/notification_module/: buzzer.cpp  buzzer.hpp  leds.cpp  leds.hpp  notification.hpp
src/uavos/: uavos_modules_manager.cpp  uavos_modules_manager.hpp  udpCommunicator.cpp  udpCommunicator.hpp
uavos/: uavos_modules_manager.cpp  uavos_modules_manager.hpp
wiki/: CAndruavAuthenticator.md  CAndruavCommServer.md  CAndruavFacade.md  CAndruavParser.md  CConfigFile_README.md  CMissionManagerBase.md  DE_Comm_Architecture.md  DE_Comm_Mesh_Setup.md
